--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -5,6 +5,8 @@ $catalog = $this->getChildCategories(['pageId' => 4573]);
 $childCategoryList = $catalog['lines'];
 $cart = $this->macros('emarket', 'cart');
 $cart['drawFormButton'] = true;
+$amount = $cart['total-amount'];
+$total_price = number_format(ceil($cart['total-price']['actual']), 0, '.', ' ') . $cart['total-price']['suffix'];
 $productList = $this->getOrderItems($cart);
 if (!empty($variables['parents'])) {
   if (isset($variables['parents'][1]))
@@ -342,7 +344,7 @@ if (!empty($variables['parents'])) {
       </div>
     </div>
     <div class="popup-wrap" id="basket">
-      <div class="popup popup--300">
+      <div class="popup popup--300 mobile-cart_popup">
         <div class="popup__close" onclick="close_popup('basket')">
           <div></div>
           <div></div>
@@ -354,13 +356,39 @@ if (!empty($variables['parents'])) {
             <div class="popup-form__btn"><a class="btn btn--blue" href="/shop/">Каталог оборудования</a></div>
             <div class="popup-form__img"><img src="dist/assets/images/popap-img.png" alt=""></div>
           <?php else : ?>
-            <h2 class="popup-form__title">Товаров в корзине: <?= count($productList) ?></h2>            
+            <h2 class="popup-form__title">Корзина</h2>            
             <?php foreach ($productList as $index => $product) : ?>
-              <div id="<?= "order_item_{$product['id']}" ?>" class="order_bill-item bill_goods">
-                <div class="popup-form__text"><?=$product['name']?></div>
+              <div class="order_item order_item-mobile" data-id="<?= $product["id"]?>" id="<?= "order_item_{$product['id']}" ?>">
+                <div class="cart__list__icon">
+                  <a href="<?= $this->getPath($product['page']) ?>">
+                    <img class="cart__img" src="<?=$this->thumb($this->getPhotoPath($product['page']),114)[0]?>">
+                  </a>
+                </div>
+                <div class="popup-form__text">
+                  <h6><?=$product['name']?></h6>
+                  <p><span><?= $product['price']['prefix'].number_format(ceil( $product['price']['actual']), 0, '.', ' ').$product['price']['suffix']?></span>
+                  <span>x <?=$product['amount']?></span> 
+                  </p>
+                  <h5><?= $product['price']['prefix'].number_format(ceil( $product['price']['actual'] * $product['amount']), 0, '.', ' ').$product['price']['suffix']?></h5>
+                </div>
+                <div class="cart__list__delete">
+                  <a class="order_delete" href="#" data-id="">
+                    <svg width="15px" ,="" height="15px" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 64"><line x1="9.37" x2="54.63" y1="9.37" y2="54.63" fill="none" stroke="#010101" stroke-miterlimit="10" stroke-width="4"></line><line x1="9.37" x2="54.63" y1="54.63" y2="9.37" fill="none" stroke="#010101" stroke-miterlimit="10" stroke-width="4"></line></svg>
+                  </a>
+                </div>
               </div>
+              <hr>
             <?php endforeach; ?>
-
+            <div class="basket_tooltip-price pb-0">
+    
+  	          <p class="result_sum">
+		            Всего товаров: <span class="count-goods"><?=$amount?></span>
+              <br>
+		          <br>
+		            Итоговая сумма:<span order="price" id="order_price2"> <?= $total_price ?></span>
+	            </p>
+            </div>
+            <a class="btn btn--blue" href="/emarket/purchasing_one_step/">Оформить заказ</a>
           <?php endif; ?>
         </div>
       </div>
@@ -452,7 +480,7 @@ if (!empty($variables['parents'])) {
     </div>
 
     <div class="popup-wrap" id="other">
-      <div class="popup">
+      <div class="popup popup--mobile">
         <div class="popup__close" onclick="close_popup('other')">
           <div></div>
           <div></div>
