--- a/src/assets/css/blocks/history-slider.scss
+++ b/src/assets/css/blocks/history-slider.scss
@@ -2,7 +2,7 @@
     padding-left: calc((100% - 600px)/2 + 15px);
 
     @media screen and (max-width:$large_mobile) {
-        padding-left: 15px;
+        padding: 0 15px;
     }
 
     .swiper-container {
