--- a/src/assets/css/blocks/popup.scss
+++ b/src/assets/css/blocks/popup.scss
@@ -33,16 +33,17 @@
     .popup {
         background: #fff;
         box-sizing: border-box;
-        max-width: calc(100% - 3rem);
+        max-width: 100%;
         width: 120rem;
         position: relative;
         padding: 5rem;
-        max-height: 85%;
+        max-height: 100%;
         opacity: 0;
         top: -15%;
         transition: opacity 0.6s, top 0.6s;
         &--300{
-            width: 31rem;
+            width: 100%;
+            height: 100%;
             text-align: center;
             padding: 12rem 1.5rem 20rem;
             overflow: hidden;
@@ -50,6 +51,19 @@
         &--opacity1 {
             opacity: 1;
             top: 0px;
+        }
+        &--mobile {
+            height: 100%;
+            .popup-form {
+                padding: 40px 0;
+                .list-group-item {
+                    display: inline-block;
+                    padding: 0;
+                    color: #08c;
+                    border: none;
+                    border-bottom: 1px dotted;
+                }
+            }
         }
 
         &::-webkit-scrollbar {
