--- a/src/assets/css/blocks/sidebar.scss
+++ b/src/assets/css/blocks/sidebar.scss
@@ -38,7 +38,8 @@
             position: relative;
         }
 
-        &-catalog {
+        &--catalog {
+            height: 80vh;
             .sidebar__nav-link {
                 justify-content: flex-end;
             }
@@ -177,10 +178,11 @@
         }
 
         &--mobile {
+            overflow: auto;
             position: absolute;
             opacity: 0;
             visibility: hidden;
-            min-height: 100%;
+            height: 100%;
             min-width: 100%;
             left: 27rem;
             &-list {
