--- a/php/content/home/index.phtml
+++ b/php/content/home/index.phtml
@@ -130,7 +130,6 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
     </div>
   </div> 
 </section>
-
-
+<!-- 
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-14b2aa6c-b10f-4ad0-ad4a-ecebeee30478"></div>
+<div class="elfsight-app-14b2aa6c-b10f-4ad0-ad4a-ecebeee30478"></div> -->
