--- a/umishop_src/less/default.less
+++ b/umishop_src/less/default.less
@@ -926,6 +926,18 @@ main {
 	.ui-button .ui-icon, .ui-button:hover .ui-icon, .ui-button:focus .ui-icon {
 		background: url(../img/arr_down.png) no-repeat center;
 	}
+	.ui-selectmenu-icon{
+		margin-top: 0;
+		position: absolute;
+		right: 20px;
+		z-index: 2;
+		top: 12px;
+		width: 20px;
+		height: 20px;
+		background-image: url(../dist/assets/images/select.svg);
+		background-size: contain;
+		background-position: center;
+	}
 	.ui-selectmenu-button.ui-button {
 		outline: none;
 		border: 1px solid #ebebeb;
