--- a/compiled/demomarket.css
+++ b/compiled/demomarket.css
@@ -1387,6 +1387,18 @@ main .ui-button:hover .ui-icon,
 main .ui-button:focus .ui-icon {
   background: url(../img/arr_down.png) no-repeat center;
 }
+main .ui-selectmenu-icon {
+  margin-top: 0;
+  position: absolute;
+  right: 20px;
+  z-index: 2;
+  top: 12px;
+  width: 20px;
+  height: 20px;
+  background-image: url(../dist/assets/images/select.svg);
+  background-size: contain;
+  background-position: center;
+}
 main .ui-selectmenu-button.ui-button {
   outline: none;
   border: 1px solid #ebebeb;
