--- a/php/catalog/product/main/slider.phtml
+++ b/php/catalog/product/main/slider.phtml
@@ -12,8 +12,8 @@ $page = $variables['page'];
 ?>
 
 
-<div class="product__slider" style="height: 413px;">
-<div class="swiper-container" style="height: 413px;">
+<div class="product__slider">
+<div class="swiper-container">
 	<div class="swiper-wrapper"> 
 	<?php $i=1; foreach ($imageList as $image): ?>
 		<div class="swiper-slide">
