--- a/php/content/contacts/index.phtml
+++ b/php/content/contacts/index.phtml
@@ -4,12 +4,37 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
 
 ?>
 <div class="center-wrap" style="padding-top: 2.1rem;">
-    <?= $this->render($variables, 'layout/header/titleWithBread') ?>
+    <h5>Контакты</h5>
 </div>
 
 <div class="center-wrap contactStores" style="padding-top: 2.1rem;">
 <!--script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af5c67ada48c3ab4ef5360ebb79c24d1a5bcd4fded81cadbc1f3b3fe1b7d27156&amp;width=100%25&amp;height=451&amp;lang=ru_RU"></script-->
-
+    <!--<div class="contactStore">
+        <div class="contactStore__info">
+            <h4>Санкт-Петербург</h4>
+            <p>ПН-ПТ 10:00 - 19:00</p>
+            <p>СБ-ВС 11:00 - 18:00</p>
+            <p>ул. Бассейная, д.73, корпус 1</p>
+        </div>
+        <div class="contactStore__show">
+        <svg width="39" height="12" viewBox="0 0 39 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
+        </svg>
+        </div>
+    </div>
+    <div class="contactStore">
+        <div class="contactStore__info">
+            <h4>Москва</h4>
+            <p>10:00 - 21:00</p>
+            <p>Киевское шоссе, БЦ</p>
+            <p>Румянцево, корпус Е</p>
+        </div>
+        <div class="contactStore__show">
+        <svg width="39" height="12" viewBox="0 0 39 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
+        </svg>
+        </div>
+    </div>-->
     <div style="padding-top: 4em;">
         <strong class="contactStores__itemTitle">Санкт-Петербург</strong>
         <button class="btn btn--blue btn_showMap" data-city="spb">Показать карту</button>
@@ -92,12 +117,6 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
         </div> 
     </div>
 </div> 
-
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="article" style="padding-top: 2.1rem;">
-        <?=$page->getValue('content')?>
-    </div>
-</div>
 
 <script>
     $(".btn_showMap").click(function() {
