--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -443,6 +443,9 @@
         width:100%;
         margin-bottom: 22.3px;
     }
+    .data-form__title {
+      margin-bottom: 15px;
+    }
     &__title {
       font-size: 18px;
       font-weight: 400;
