--- a/src/assets/css/blocks/sections/contact.scss
+++ b/src/assets/css/blocks/sections/contact.scss
@@ -102,9 +102,26 @@
 
 
     &Stores{ 
-        &__list{
-            
-        }
+        /*.contactStore {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-top: 1px solid #E2E6F0;
+            border-bottom: 1px solid #E2E6F0;
+            padding: 25px;
+            h4 {
+                margin-bottom: 2rem;
+            }
+            p {
+                font-size: 14px;
+                &:nth-child(1) {
+                    margin-bottom: 0;
+                }
+                &:nth-child(2) {
+                    margin-bottom: 2rem;
+                }
+            }
+        }*/
         &__item{
             border: 1px solid #f2f2f2;
             padding: 32px;
