--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -409,7 +409,7 @@
     &__slider {
         max-width: 8.7rem;
         width: 100%;
-        height: 600px;
+        height: 413px;
         padding-top: 1rem;
         position: relative;
 
@@ -420,9 +420,16 @@
             margin-bottom: 7rem;
         }
 
+        @media screen and (max-width:$large_mobile) {
+            height: 300px;
+            .swiper-container {
+                height: 300px;
+            }
+        }
+
         .swiper-container {
             //height: 26.1rem;
-            height: 600px;
+            height: 413px;
 
             @media screen and (max-width:$large_tablet) {
                 height: auto;
