--- a/php/content/contacts/index.phtml
+++ b/php/content/contacts/index.phtml
@@ -137,7 +137,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
             <h4>Санкт-Петербург</h4>
         </div>
         <div class="yandex_map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adc12af408884d839cc28b0427e74c99eed5e906e9346058ea8f930ea0e057eb2&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adc12af408884d839cc28b0427e74c99eed5e906e9346058ea8f930ea0e057eb2&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
         <div class="contactStore__info">
             <h4>ул.Бассейная, д.73, корпус 1</h4>
@@ -167,8 +167,8 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
             </svg>
             <h4>Москва</h4>
         </div>
-        <div class="yandex_map" data-city="msc">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A62d05220fa198dbb8a6a36680ab125f2b8c0e5df504680ff744f595acbb022bb&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+        <div class="yandex_map">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A62d05220fa198dbb8a6a36680ab125f2b8c0e5df504680ff744f595acbb022bb&amp;width=100%25&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
         <div class="contactStore__info">
             <h4>Киевское шоссе, БЦ Румянцево, корпус Е</h4>
