--- a/php/content/pools/series.phtml
+++ b/php/content/pools/series.phtml
@@ -6,12 +6,11 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
 <div class="center-wrap" style="padding-top: 2.1rem;">
     <?= $this->render($variables, 'layout/header/titleWithBread') ?>
 </div>
-<div class="center-wrap" style="padding-top: 2.1rem;">
-    <div class="series-list">
+
+<div class="series-list" style="padding-top: 2.1rem;">
         <?php foreach($catalog['items'] as $category): ?>
             <?= $this->render($category, 'content/pools/series/preview') ?>
         <?php endforeach; ?>
-    </div>
 </div>
 
 <div class="center-wrap" style="padding-top: 2.1rem;">
